# school_diary

./: .claude_project_config.json  .cursorignore  .cursorrules  .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md.backup-20251010  LICENSE  README.md  SETUP.md  USER_TESTING_MANUAL.md  clean_test_ui.py  create_alert_test_data.py  create_edge_case_test_data.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  gitlab-ci-ecr-policy.json  manage.py  manual_admin_allauth_login.py  migration-map.csv  mock_inbox_view.html  mock_inbox_view_v2.html  mypy.ini  package-lock.json  pyproject.toml  pyrightconfig.json  setup.sh  verify.sh  verify_alerts.py  verify_edge_cases.py
.devcontainer/: devcontainer.json  devcontainer.json.bak  docker-compose.yml
.envs.example/.local/: .django  .postgres
.github/workflows/: deploy.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start
compose/production/traefik/: traefik.yml
config/: __init__.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
doc/: DEPLOYMENT.md  E2E_TEST_PLAN.md  E2E_TEST_REPORT.md  ER_DIAGRAM.md  FEATURES.md  LOCAL_DEPLOYMENT.md  MANUAL_FOR_CLIENT.md  PRESENTATION.md  PRODUCTION_DEPLOYMENT.md  SYSTEM_FLOW_GUIDE.md  TECHNICAL_SPECIFICATION.md  TEST_ACCOUNTS.md  USER_MANUAL.md  git-rules.md
doc/MANUALS/: 01_STUDENT.md  02_TEACHER.md  03_GRADE_LEADER.md  04_PRINCIPAL.md  05_ADMIN.md
docs/: 02-system-overview.md  03-features.md  04-data-model.md  05-architecture.md  08-deployment.md  09-test-accounts.md  COMMANDS.md  DEPLOYMENT_REFERENCE.md  DESIGN_STARTING_POINT.md  ER_DIAGRAM.md  FEATURES.md  ITOM_ROADMAP.md  MANUAL_FOR_CLIENT.md  MCPサーバー推奨設定.md  OPERATIONS_RUNBOOK.md  PRESENTATION.md  PROJECT_INFO.md  README.md  SERVICENOW_INTEGRATION_PLAN.md  SYSTEM_ARCHITECTURE.md  SYSTEM_FLOW_GUIDE.md  TECHNICAL_SPECIFICATION.md  TERRAFORM_ARCHITECTURE.md  VS_Code_拡張機能ガイド.md  conf.py  howto.rst  index.rst  kits_io実装ガイド.md  kits_notifications実装ガイド.md  kits_reports実装ガイド.md  kits利用ガイド.md  kits機能概要.md  kits準備状況評価.md  make.bat  users.rst  システムアーキテクチャ設計書.md  テスト計画書.md  データモデル設計書.md  引継ぎメモ_2025-01-05.md  機能仕様書.md  (+3 more)
docs-private/: PROJECT_STATUS.md
docs-private/daily_logs/: 20251008_day4_セッションログ.md  20251008_運用ルール改善_引継ぎ.md
docs/06-specifications/: login-redirect-spec.md
docs/07-testing/: 20251023-functional-test-matrix.md  20251023-manual-test-procedure.md  20251023-qa-phase-report.md  20251024-test-implementation-handoff.md  README.md  test-strategy.md  traceability-matrix.md
docs/07-testing/cases/: critical-test-cases.md  high-test-cases.md
docs/07-testing/plans/: functional-test-plan.md  smoke-test-plan.md  system-test-plan.md
docs/guides/: 01-alarm-severity.md  02-cloudwatch-dashboards.md  03-eventbridge.md  04-cost-analysis.md  05-generate-env.md  06-github-actions-cicd.md  07-terraform-apply.md  08-current-cd-flow.md  09-ssm-overview.md  10-configuration-map.md  11-cd-canonical-flow.md  12-cd-troubleshooting.md  13-cd-recovery-log.md  README.md
docs/improvements/: OVERVIEW.md  backup-restore-testing.md  branch-protection.md  cd-responsibility-separation.md  ci-testing.md  cicd-pipeline.md  configuration-management-refactor.md  configuration-tracking.md  container-security.md  cost-anomaly-detection.md  encryption-key-optimization.md  env-automation.md  event-normalization.md  incident-response-automation.md  infrastructure-rebuild.md  itil-process-alignment.md  monitoring-severity-dashboard.md  postmortem-process.md  resource-tagging-governance.md  scheduled-resource-control.md  secret-management-optimization.md  service-availability-control.md  servicenow-integration.md  sli-slo.md  structured-logging.md  synthetic-monitoring.md  terraform-ci.md  terraform-retention-audit.md
docs/kits/: DOCUMENTATION_PROCESS.md  DOCUMENTATION_STANDARDS.md  IMPLEMENTATION_CHECKLIST_TEMPLATE.md  README.md
docs/kits/approvals/: 00_実装ログ.md  (+7 more)
docs/past-challenges/: CHALLENGE_01_OVERTIME_MANAGEMENT.md  CHALLENGE_02_MATERNAL_HEALTH_HANDBOOK.md  CHALLENGE_03_BASEBALL_TALENT_MANAGEMENT.md  CHALLENGE_04_LIBRARY_SYSTEM.md  README.md
docs/testing/: FEATURE_TEST_MAPPING.md  TEST_DATA_SPECIFICATION.md  TEST_RESULT_SHEET.md  UNIT_TEST_REPORT.md  USER_TESTING_MANUAL.md
docs/troubleshooting/: 20251025_ec2_memory_optimization.md
kits/: CHANGELOG.md  __init__.py
kits/accounts/: __init__.py  apps.py
kits/approvals/: __init__.py  admin.py  apps.py  examples.py  models.py  services.py  signals.py  tasks.py
kits/audit/: __init__.py  admin.py  apps.py  examples.py  models.py  services.py  signals.py  tasks.py
kits/demos/: admin.py  apps.py  models.py  serializers.py
kits/io/: __init__.py  admin.py  apps.py  examples.py  importers.py  models.py  signals.py  validators.py
kits/kit_settings/: __init__.py  settings.py
kits/notifications/: __init__.py  admin.py  apps.py  examples.py  models.py  services.py  signals.py  tasks.py
kits/reports/: __init__.py  admin.py  apps.py  charts.py  examples.py  exporters.py  models.py  services.py
kits/search/: admin.py  apps.py  init.py  models.py
school_diary/: conftest.py
school_diary/diary/: academic_year.py  adapters.py  admin.py  alert_service.py  apps.py  auth_backends.py  authorization.py  constants.py  forms.py  middleware.py  models.py  signals.py  test_admin_user_creation.py  test_ui.py  test_ui.py.backup  test_ui_cleaned.py  test_ui_temp.py  tests.py  urls.py  utils.py  views.py
school_diary/templates/: base.html
scripts/: check_kits_docs_quality.py  generate-env.sh  setup-ec2.sh  ssm-deploy.sh
scripts/bootstrap/: render-env-from-ssm.sh  sync-app-files.sh
terraform/: .gitignore  ARCHITECTURE.md  aws-architecture.drawio
terraform/files/: maintenance.html  user_data.sh  user_data.sh.tftpl
tests/: test_merge_production_dotenvs_in_dotenv.py
tests/approvals/: __init__.py  test_models.py  test_services.py
tests/io/: test_models.py
tests/notifications/: test_models.py  test_services.py
tests/reports/: __init__.py  test_charts.py
(+233 files in other folders)
