[project]
name = "school_diary"
version = "0.1.0"
description = "業務Webアプリ共通土台の検証用プロジェクト"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "BizApp Team", email = "admin@example.com" }]
requires-python = "==3.12.*"
dependencies = [
    "argon2-cffi==25.1.0",
    "celery==5.5.3",
    "crispy-bootstrap5==2025.6",
    "django==5.1.12",
    "django-allauth[mfa]==65.11.1",
    "django-anymail[amazon-ses]==13.1",
    "django-celery-beat==2.8.1",
    "django-crispy-forms==2.4",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-storages[s3]==1.14.6",
    "flower==2.0.1",
    "gunicorn==23.0.0",
    "hiredis==3.2.1",
    "pillow==11.3.0",
    "psycopg[c]==3.2.9",
    "python-slugify==8.0.4",
    "redis==6.4.0",
    "whitenoise==6.9.0",
    "django-simple-history~=3.5.0",
    "django-fsm~=2.8.1",
    "djangorestframework~=3.15.2",
    "bleach==6.1.0",
    "markdown==3.6",
    "django-jazzmin>=3.0.1",
]

[project.optional-dependencies]
# 開発用の依存関係
dev = [
    "coverage==7.10.6",
    "django-coverage-plugin==3.1.1",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-stubs[compatible-mypy]==5.2.2",
    "djlint==1.36.4",
    "factory-boy==3.3.2",
    "ipdb==0.13.13",
    "mypy==1.17.1",
    "pre-commit==4.3.0",
    "psycopg[c]==3.2.9",
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "ruff==0.12.12",
    "sphinx==8.2.3",
    "sphinx-autobuild==2025.8.25",
    "watchfiles==1.1.0",
    "werkzeug[watchdog]==3.1.3",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]

# ==== Coverage ====
[tool.coverage.run]
include = ["school_diary/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

# ==== Ruff ====
[tool.ruff]
target-version = "py312"
# これらのパターンに一致するディレクトリ/ファイルはチェック対象外にする
extend-exclude = ["*/migrations/*.py", "staticfiles/*", "media/*"]

[tool.ruff.lint]
# 有効にするルールのリスト
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    #"BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]
# 無効にする（無視する）特定のルール
ignore = [
    "S101",   # assertの使用を許可
    "RUF012", # ClassVarの警告を無視
    "SIM102", # ネストしたif文を許可
    #"UP038",  # isinstanceのタプルチェックに関する警告を無視
]
# 安全でない可能性のある自動修正を有効にするルール
#extend-unsafe-fixes = ["UP038"]

[tool.ruff.lint.isort]
# import文を一行に強制する
force-single-line = true

[tool.setuptools]
packages = ["school_diary", "kits"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "pytest-cov>=7.0.0",
]
